--- a/templates/index.html
+++ b/templates/index.html
@@ -215,15 +215,15 @@ footer .socials a ion-icon{
 			<!-- <span id="themeSwitcher"><ion-icon name="sunny-outline"></ion-icon></span> -->
                     <main>
                         <p>Enter the text you wish to translate, choose the language, and click Translate!</p>
-                        <form method="POST">
+                        <form method="POST" enctype="multipart/form-data">
                             <!-- Form content here -->
                 		<div class="form__row text">
                 		    <label for="text">Text</label>
 				    <textarea name="text" class="form-control" placeholder="Enter the text">{{ original_text }}</textarea>
                 		</div>
                 		<div class="upload-file-row">
+					<input type="file" name="file" class="form-control" style="width:75%">
 					<button type="button" class="btn btn-success mr-2">Upload File</button>
-					<input type="text" class="form-control" style="width:75%">
                 		</div>
                 		<div class="form__row target">
                 		    <label for="language">Target language:</label>
@@ -286,7 +286,7 @@ footer .socials a ion-icon{
                         	    <!-- Form content here -->
                 			<div class="form__row text">
                 			    <label for="text">Text</label>
-					    <textarea name="text" class="form-control" placeholder="Traslate Results">{{ translated_text }}</textarea>
+					    <textarea name="text" class="form-control" placeholder="Translate Results">{{ translated_text }}</textarea>
                 			</div>
                         	</form>
                     </main>
